[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Enemy.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Booster.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=3]
[ext_resource path="res://Audio/sfx_exp_short_hard2.wav" type="AudioStream" id=4]
[ext_resource path="res://Sprites/Enemy-Dmg.png" type="Texture" id=5]
[ext_resource path="res://Audio/sfx_exp_short_soft1.wav" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Standard",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 5 ) ],
"loop": true,
"name": "Damage",
"speed": 10.0
} ]

[sub_resource type="Curve" id=1]
min_value = -1.0
_data = [ Vector2( 0, 0.0181819 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.254545 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0.745454 ), 0.0, 0.0, 0, 0, Vector2( 0.686275, 0 ), 0.0, 0.0, 0, 0 ]

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 202, 337 )
scale = Vector2( 1.2, 1.2 )
z_index = 5
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "Damage"

[node name="AfterburnL" type="CPUParticles2D" parent="."]
position = Vector2( -10.5, -23 )
rotation = 3.14159
scale = Vector2( 0.05, 0.05 )
z_index = -1
amount = 14
lifetime = 1.5
speed_scale = 1.1
randomness = 0.25
lifetime_randomness = 0.25
texture = ExtResource( 2 )
spread = 0.0
gravity = Vector2( 0, 150 )
color = Color( 0.180392, 1, 1, 1 )
hue_variation = -0.06
hue_variation_curve = SubResource( 1 )

[node name="AfterburnL2" type="CPUParticles2D" parent="."]
position = Vector2( -19.5, -23 )
rotation = 3.14159
scale = Vector2( 0.05, 0.05 )
z_index = -1
amount = 14
lifetime = 1.5
speed_scale = 1.1
randomness = 0.25
lifetime_randomness = 0.25
texture = ExtResource( 2 )
spread = 0.0
gravity = Vector2( 0, 150 )
color = Color( 0.180392, 1, 1, 1 )
hue_variation = -0.06
hue_variation_curve = SubResource( 1 )

[node name="AfterburnR" type="CPUParticles2D" parent="."]
position = Vector2( 10.5, -23 )
rotation = 3.14159
scale = Vector2( 0.05, 0.05 )
z_index = -1
amount = 14
lifetime = 1.5
speed_scale = 1.1
randomness = 0.25
lifetime_randomness = 0.25
texture = ExtResource( 2 )
spread = 0.0
gravity = Vector2( 0, 150 )
color = Color( 0.180392, 1, 1, 1 )
hue_variation = -0.06
hue_variation_curve = SubResource( 1 )

[node name="AfterburnR2" type="CPUParticles2D" parent="."]
position = Vector2( 19.5, -23 )
rotation = 3.14159
scale = Vector2( 0.05, 0.05 )
z_index = -1
amount = 14
lifetime = 1.5
speed_scale = 1.1
randomness = 0.25
lifetime_randomness = 0.25
texture = ExtResource( 2 )
spread = 0.0
gravity = Vector2( 0, 150 )
color = Color( 0.180392, 1, 1, 1 )
hue_variation = -0.06
hue_variation_curve = SubResource( 1 )

[node name="BoosterL" type="Light2D" parent="."]
position = Vector2( -15, -21 )
rotation = 3.14159
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
color = Color( 0.603922, 0.972549, 0.807843, 1 )
shadow_enabled = true

[node name="BoosterR" type="Light2D" parent="."]
position = Vector2( 15, -21 )
rotation = 3.14159
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
color = Color( 0.603922, 0.972549, 0.807843, 1 )
shadow_enabled = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -26, -22, -15, 28, -9, 28, -6, -3, -4, -3, -4, 12, 4, 12, 4, -3, 6, -3, 9, 28, 15, 28, 26, -22, 7, -22, 6, -18, -6, -18, -7, -22 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
visible = false
polygon = PoolVector2Array( -26, -22, -15, 28, -9, 28, -6, -3, -4, -3, -4, 12, 4, 12, 4, -3, 6, -3, 9, 28, 15, 28, 26, -22, 7, -22, 6, -18, -6, -18, -7, -22 )

[node name="DamageParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 50
lifetime = 1.5
one_shot = true
speed_scale = 9.81
texture = ExtResource( 2 )
emission_shape = 1
emission_sphere_radius = 1.1
direction = Vector2( 0, -1 )
spread = 127.28
gravity = Vector2( 0, 0 )
initial_velocity = 25.0
scale_amount = 0.4
scale_amount_curve = SubResource( 2 )

[node name="TakeDamageSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="DeathSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[connection signal="tree_exiting" from="." to="." method="_on_Enemy_tree_exiting"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
